wavenc: use WAVE_FORMAT_EXTENSIBLE for more than 2 channels

https://bugzilla.gnome.org/show_bug.cgi?id=733444